--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,13 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Login to ACR
+        uses: docker/login-action@v2
+        with:
+          registry: registry.cn-guangzhou.aliyuncs.com
+          username: ${{ secrets.ALIYUN_USER }}
+          password: ${{ secrets.ALIYUN_PASS }}
+
       - name: Docker Push
         uses: docker/build-push-action@v5
         if: github.event_name == 'push'
@@ -50,6 +57,8 @@ jobs:
           tags: |
             ghcr.io/scutrobotlab/rm-schedule:latest
             ghcr.io/scutrobotlab/rm-schedule:${{ github.sha }}
+            registry.cn-guangzhou.aliyuncs.com/scutrobot/rm-schedule:latest
+            registry.cn-guangzhou.aliyuncs.com/scutrobot/rm-schedule:${{ github.sha }}
           labels: |
             org.opencontainers.image.source=https://github.com/scutrobotlab/rm-schedule
             org.opencontainers.image.revision=${{ github.sha }}
