--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: Build
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 jobs:
   docker:
@@ -57,8 +57,10 @@ jobs:
           tags: |
             ghcr.io/scutrobotlab/rm-schedule:latest
             ghcr.io/scutrobotlab/rm-schedule:${{ github.sha }}
+            ghcr.io/scutrobotlab/rm-schedule:${{ github.ref_name }}
             registry.cn-guangzhou.aliyuncs.com/scutrobot/rm-schedule:latest
             registry.cn-guangzhou.aliyuncs.com/scutrobot/rm-schedule:${{ github.sha }}
+            registry.cn-guangzhou.aliyuncs.com/scutrobot/rm-schedule:${{ github.ref_name }}
           labels: |
             org.opencontainers.image.source=https://github.com/scutrobotlab/rm-schedule
             org.opencontainers.image.revision=${{ github.sha }}
